# codex-bridge

./: .dockerignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  publish-python.yml
broker/: README.md  pyproject.toml
broker/src/codex_bridge_broker/: __init__.py  api.py  callback.py  cli.py  config.py  pkce.py  runtime.py  server.py  session_store.py
broker/tests/: test_api.py  test_session_store.py
docs/: ARCHITECTURE.md  MIGRATION_PLAN.md  PUBLISHING.md  TARGET_ARCHITECTURE.md  TESTING.md
docs/adr/: 0001-layered-architecture.md
python/: README.md  pyproject.toml
python/examples/: fastapi_app.py
python/src/codex_bridge/: client.py  types.py
python/tests/: test_client.py
sdk/: README.md  pyproject.toml
sdk/examples/: fastapi_app.py
sdk/src/codex_bridge_sdk/: __init__.py  client.py  types.py
sdk/tests/: test_client.py
src/cli/: README.md  chat-codex.ts  serve.ts
src/client/: README.md  index.ts
src/codex_bridge/: __init__.py  __main__.py  auth.py  cli.py  codex.py  default_instructions.py  oauth.py  runtime.py  server.py  version.py
src/codex_bridge/app/: __init__.py  agent_service.py  auth_service.py  chat_service.py
src/codex_bridge/bootstrap/: __init__.py  config.py  runtime.py
src/codex_bridge/domain/: __init__.py  agent.py  auth.py  callbacks.py  codex.py  errors.py  ports.py
src/codex_bridge/infra/auth/: __init__.py  callback_server.py  jwt_claims.py  oauth_gateway.py
src/codex_bridge/infra/codex/: __init__.py  default_instructions.py  http_gateway.py
src/codex_bridge/infra/storage/: __init__.py  session_store.py
src/codex_bridge/infra/tools/: __init__.py  filesystem.py  shell.py
src/codex_bridge/interfaces/: cli.py
src/codex_bridge/interfaces/http/: __init__.py  api.py  server.py
src/main/: README.md  index.ts
src/main/auth/: README.md  auth-service.ts  callback-server.ts  jwt.ts  pkce.ts  provider-definitions.ts  session-store.ts
src/main/ipc/: README.md  channels.ts  register-ipc.ts
src/main/network/: README.md  facade.ts  provider-registry.ts  streaming.ts
src/main/network/providers/: README.md  codex-default-instructions.ts  codex-provider.ts  gemini-provider.ts  openai-provider.ts
src/preload/: README.md  index.ts
src/server/: README.md  chat.ts  http-server.ts  runtime.ts  types.ts
src/shared/: README.md  auth.ts  bridge.ts  ipc.ts  network.ts  preload.ts  sse.ts
tests/: test_api.py  test_session_store.py
tests/e2e/: test_cli.py
tests/integration/: test_http_api.py
tests/unit/: test_agent_service.py  test_auth_service.py  test_callback_server.py  test_chat_service.py  test_cli_login.py  test_session_store.py
