[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-bridge"
version = "1.0.0"
description = "Local Python broker for Codex authentication and chat access."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Elian Abrao" }
]
keywords = ["codex", "bridge", "broker", "oauth", "pkce", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.optional-dependencies]
secure = ["keyring>=25,<26"]
publish = ["build>=1.2,<2", "twine>=5,<6"]

[project.scripts]
codex-bridge = "codex_bridge.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
