[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-bridge-broker"
version = "0.1.0"
description = "Python-first local broker runtime for codex-bridge."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Elian Abrao" }
]
dependencies = []

[project.scripts]
codex-bridge-broker = "codex_bridge_broker.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
