[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-bridge-sdk"
version = "1.0.0"
description = "Python SDK for consuming a local codex-bridge broker."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Elian Abrao" }
]
keywords = ["codex", "bridge", "sdk", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.optional-dependencies]
examples = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1"
]
publish = ["build>=1.2,<2", "twine>=5,<6"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_bridge_sdk = ["py.typed"]
